MULT: EN2021 + correções aos exercícios

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 3ºAno/2ºSemestre/FIA/PLs/Resoluções_MiguelCabralPinto/doc/*
 3ºAno/2ºSemestre/EA/Exames/doc_miguel/*
+3ºAno/2ºSemestre/MULT/Exames/doc_miguel/*
 
 .DS_Store
